# hand_pattern_recognition

./: .gitignore  README.md  docker-compose.yml
docker/: Dockerfile  entrypoint.sh
src/gesture_recognition/: package.xml  setup.py
src/gesture_recognition/gesture_recognition/: gesture_node.py
src/gesture_recognition/resource/: gesture_recognition
src/ur5e_desk_bringup/: CMakeLists.txt  package.xml
src/ur5e_desk_bringup/launch/: bringup.launch.py
src/ur5e_desk_bringup/rviz/: ur5e_desk.rviz
src/ur5e_desk_control/: CMakeLists.txt  package.xml
src/ur5e_desk_control/resource/: ur5e_desk_control
src/ur5e_desk_control/src/: arm_control_node.cpp
src/ur5e_desk_control/ur5e_desk_control/: __init__.py  task_manager_node.py
src/ur5e_desk_description/: CMakeLists.txt  package.xml
src/ur5e_desk_description/config/: ros2_controllers.yaml
src/ur5e_desk_description/urdf/: ur5e_desk.urdf.xacro
src/ur5e_desk_gazebo/: CMakeLists.txt  package.xml
src/ur5e_desk_gazebo/launch/: sim.launch.py
src/ur5e_desk_gazebo/worlds/: desk_world.sdf
src/ur5e_desk_interfaces/: CMakeLists.txt  package.xml
src/ur5e_desk_interfaces/msg/: DetectedObject.msg
src/ur5e_desk_interfaces/srv/: DetectObjects.srv
src/ur5e_desk_moveit_config/: CMakeLists.txt  package.xml
src/ur5e_desk_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  ur5e_desk.srdf
src/ur5e_desk_moveit_config/launch/: moveit.launch.py
src/ur5e_desk_moveit_config/scripts/: planning_scene_initializer.py
src/ur5e_desk_perception/: package.xml  setup.cfg  setup.py
src/ur5e_desk_perception/resource/: ur5e_desk_perception
src/ur5e_desk_perception/ur5e_desk_perception/: object_detection_node.py
