<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5e_desk_bringup</name>
  <version>1.0.0</version>
  <description>Master bringup package for Gesture-Controlled UR5e Robot Arm</description>
  <maintainer email="user@todo.todo">ROS Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ur5e_desk_description</exec_depend>
  <exec_depend>ur5e_desk_gazebo</exec_depend>
  <exec_depend>ur5e_desk_moveit_config</exec_depend>
  <exec_depend>ur5e_desk_perception</exec_depend>
  <exec_depend>ur5e_desk_control</exec_depend>
  <exec_depend>gesture_recognition</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
